# match-PM-match_pm_ProMOC_Assembly

./: .gitignore  CMakeLists.txt  README.MD  README.md  package.xml  plan.drawio  setup.cfg  setup.py  validate_setup.sh
control_pkg/: package.xml  setup.py
control_pkg/control_pkg/: controller_app.py  controller_webapp.html  promoc_assembly_launch.py
control_pkg/launch/: promoc_assembly_launch.py
home/pmlab/Dokumente/cyclonedds_config/: cyclonedds.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/promoc_assembly_interfaces/include/promoc_assembly_interfaces/promoc_assembly_interfaces/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  test.hpp
install/promoc_assembly_interfaces/share/promoc_assembly_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/promoc_assembly_interfaces/share/promoc_assembly_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_promoc_assembly_interfaces__rosidl_generator_cExport-noconfig.cmake  export_promoc_assembly_interfaces__rosidl_generator_cExport.cmake  export_promoc_assembly_interfaces__rosidl_generator_cppExport.cmake  export_promoc_assembly_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_promoc_assembly_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  promoc_assembly_interfacesConfig.cmake  promoc_assembly_interfaces__rosidl_typesupport_cExport-noconfig.cmake  promoc_assembly_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  promoc_assembly_interfaces__rosidl_typesupport_introspection_cExport.cmake  promoc_assembly_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/promoc_assembly_interfaces/share/promoc_assembly_interfaces/msg/: Test.idl
install/promoc_assembly_interfaces/share/promoc_assembly_interfaces/planar_motor/: LevitationXbots_Request.msg  SixDofMotion_Request.msg  SixDofMotion_Response.msg
install/promoc_assembly_interfaces/share/promoc_assembly_interfaces/srv/: LinearMotionSi.idl
install/promoc_nodes/lib/promoc_nodes/: mover_client_node  mover_service_node
install/promoc_nodes/share/promoc_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
interfaces/mover_interfaces/: CMakeLists.txt
interfaces/mover_interfaces/srv/: ActivateXbots.srv
launch/launch_utils/: package.xml  setup.py
linear_axis_nodes/: package.xml  setup.cfg  setup.py
linear_axis_nodes/linear_axis_nodes/: Readme.md  lts300_control_script.py  lts300_serial_controller.py  lts300_service_node.py  lts300_service_node_linux.py  lts300_z_axis_node.py  lts_axis_persistent_node.py  mock_thorlabs.py  z_axis_service_node.py
log/: latest_build
match-PM-match_pm_ProMOC_Assembly/interfaces/mover_interfaces/srv/: LevitationXbots.srv
match-PM-match_pm_ProMOC_Assembly/nodes/planar_motor/: mover_service_node.py
match-PM-match_pm_ProMOC_Assembly/skripts/Sternberg/: call_mover_node.py
match_pm_promoc_assembly/interfaces/mover_interfaces/srv/: SixDofMotion.srv
match_pm_promoc_assembly/nodes/planar_motor/: mover_service_node.py
match_pm_promoc_assembly/skripts/sternberg/: call_mover_node.py
nodes/: package.xml  setup.py
nodes/nodes/planar_motor/: mover_client_node.py  mover_service_node.py
nodes/nodes/test_nodes/: test_node.py
planar_motor/: package.xml  setup.cfg  setup.py
planar_motor/planar_motor/: README.md  lts300_controller.py  mover_client_node.py  sternberg call_mover_node.py
planar_motor_interfaces/: package.xml
planar_motor_interfaces/msg/: XBotInfo.msg
planar_motor_interfaces/srv/: LinearMotionSi.srv
planar_motor_nodes/: package.xml  setup.cfg  setup.py
planar_motor_nodes/planar_motor_nodes/: call_mover_node_test.py  mock_pmclib.py  mover_client_node.py  mover_service_client.py  mover_service_node.py  mover_test.py
promoc_assembly_interfaces/: CMakeLists.txt  package.xml
promoc_assembly_interfaces/msg/linear_axis/: LinearAxisInfo.msg
promoc_assembly_interfaces/msg/toolchanger/: ToolchangerInfo.msg  toolchanger.msg
promoc_assembly_interfaces/msg/usb_relay/: RelayInfo.msg
promoc_assembly_interfaces/srv/linear_axis/: GetPosition.srv  GetSetHomingParams.srv  GetSetVelocityParams.srv  Home.srv  MoveRelativ.srv  MoveTo.srv  ShutdownLinearAxis.srv
promoc_assembly_interfaces/srv/planar_motor/: ActivateXbots.srv  ArcMotionTargetRadius.srv  LevitationXbots.srv  LinearMotionSi.srv  RotaryMotion.srv  SetVelocityAcceleration.srv  SixDofMotion.srv  StopMotion.srv
promoc_assembly_interfaces/srv/toolchanger/: toolchanger.srv
promoc_assembly_interfaces/srv/usb_relay/: SetRelay.srv
promoc_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
promoc_bringup/config/: promoc_assembly_params.yaml
promoc_bringup/launch/: promoc_assembly_demo_launch.py  promoc_assembly_launch.py
promoc_bringup/promoc_bringup/: __init__.py  demo_controller.py
promoc_nodes/: package.xml  setup.cfg  setup.py
promoc_nodes/promoc_nodes/planar_motor/: call_mover_node_test.py  mover_client_node.py  mover_service_node.py
promoc_nodes/promoc_nodes/toolchanger/: toolchanger_service_node.py
promoc_nodes/skripts/test_skripts/: call_mover_node_test.py
setup/: QUICKSTART.md  README.md  check_dotnet_runtime.py  dependencies.txt  install_python_deps.sh  install_system_deps.sh  test_basic_functionality.py  validate_setup.sh
skripts/test_skripts/: call_mover_node_test.py
submodules/planar_motor/: package.xml  setup.py
submodules/planar_motor/planar_motor/: mover_service_node.py
submodules/thorlabs/: package.xml  setup.cfg  setup.py
submodules/thorlabs/thorlabs/: lts300_service_node.py
thorlabs_nodes/: package.xml  setup.cfg  setup.py
thorlabs_nodes/thorlabs_nodes/: lts300.py  lts300_service_node.py
usb_relay/: package.xml  setup.cfg  setup.py
usb_relay/usb_relay/: usb_relay_basic.py  usbrelay_service_node.py
(+49 files in other folders)
