<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planar_motor_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pmlab_mover@todo.todo">pmlab_mover</maintainer>
  <license>TODO: License declaration</license>
 
  <buildtool_depend>ament_python</buildtool_depend>   <!-- Use ament_python for Python packages -->
  <build_depend>setuptools</build_depend>             <!-- Required for building Python packages -->
  <build_depend>rclpy</build_depend>                  <!-- Required for ROS 2 Python nodes -->
  <build_depend>std_msgs</build_depend>               <!-- Standard ROS 2 message types -->

  <build_depend>promoc_assembly_interfaces</build_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>                    <!-- Required for running Python nodes -->
  <exec_depend>std_msgs</exec_depend>                 <!-- Standard message types -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
